--- a/Alzy/app/src/main/res/layout/activity_cadastro.xml
+++ b/Alzy/app/src/main/res/layout/activity_cadastro.xml
@@ -6,16 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".activity.CadastroActivity">
 
-    <ProgressBar
-        android:id="@+id/progressBarCircularCadastro"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="201dp"
-        android:layout_height="107dp"
-        android:layout_marginTop="250dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
@@ -174,5 +164,16 @@
             android:textAlignment="center"
             android:textSize="12sp" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBarCircularCadastro"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="245dp"
+        android:layout_height="279dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
