Refatorando funções. Função adicionar despesa.

--- a/Alzy/app/src/main/res/layout/activity_despesa.xml
+++ b/Alzy/app/src/main/res/layout/activity_despesa.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DespesaActivity">
+    tools:context=".activity.DespesaActivity">
 
     <!---->
     <LinearLayout
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDarkDefault"
-
+        android:onClick="validarCamposESalvarDespesa"
         android:src="@drawable/mi_ic_finish"
         app:fab_colorNormal="@color/colorPrimaryDespesa"
         app:fab_label="Confirmar"
