--- a/Alzy/app/src/main/res/layout/activity_principal.xml
+++ b/Alzy/app/src/main/res/layout/activity_principal.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/whiteColorAux"
     tools:context=".activity.PrincipalActivity">
 
     <LinearLayout
@@ -46,7 +47,6 @@
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
         android:background="@color/gra_ligh"
         android:orientation="horizontal"
         android:padding="10dp"
@@ -84,9 +84,7 @@
         android:id="@+id/linearLayout5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
         android:layout_marginTop="53dp"
-        android:layout_marginEnd="1dp"
         android:background="@color/gra_ligh"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +164,6 @@
     </LinearLayout>
 
 
-
     <com.github.clans.fab.FloatingActionButton
         android:id="@+id/fb_voltar"
         android:layout_width="wrap_content"
@@ -214,9 +211,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:menu_colorNormal="@color/colorPrimaryDarkDefault"
         app:menu_fab_size="normal"
-        app:menu_icon="@drawable/ic_baseline_add_circle_24"
-        app:menu_colorNormal="@color/colorPrimaryDarkDefault">
+        app:menu_icon="@drawable/ic_baseline_add_circle_24">
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fb_receita"
