--- a/Alzy/app/src/main/res/layout/activity_principal.xml
+++ b/Alzy/app/src/main/res/layout/activity_principal.xml
@@ -95,6 +95,7 @@
             android:id="@+id/textSaldo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:text="@string/carregando"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDarkReceita"
@@ -141,10 +142,11 @@
             android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="@string/lan_amentos"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="@color/font_light"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
