--- a/Alzy/app/src/main/res/layout/activity_altera_nome.xml
+++ b/Alzy/app/src/main/res/layout/activity_altera_nome.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlteraNomeActivity">
+    tools:context=".activity.AlteraNomeActivity">
 
 
     <LinearLayout
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/textViewEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
