--- a/Alzy/app/src/main/res/layout/activity_senha_altera.xml
+++ b/Alzy/app/src/main/res/layout/activity_senha_altera.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlteraSenhaActivity">
+    tools:context=".activity.AlteraSenhaActivity">
 
     <!---->
 
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/textViewEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
