--- a/Alzy/app/src/main/res/layout/activity_categorias.xml
+++ b/Alzy/app/src/main/res/layout/activity_categorias.xml
@@ -8,6 +8,26 @@
     tools:context=".activity.CategoriasActivity">
 
     <LinearLayout
+        android:id="@+id/topo"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimaryDarkDefault"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Categorias"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/linearLayout15"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -15,7 +35,7 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/topo">
 
         <ListView
             android:id="@+id/listViewCategorias"
