--- a/Alzy/app/src/main/res/layout/activity_categorias.xml
+++ b/Alzy/app/src/main/res/layout/activity_categorias.xml
@@ -31,6 +31,8 @@
         android:id="@+id/linearLayout15"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout16"
         app:layout_constraintEnd_toEndOf="parent"
