--- a/Alzy/app/src/main/res/layout/activity_principal.xml
+++ b/Alzy/app/src/main/res/layout/activity_principal.xml
@@ -30,7 +30,6 @@
         android:id="@+id/calendarView"
         android:layout_width="0dp"
         android:layout_height="49dp"
-
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +102,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayoutTopo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimaryDarkDefault"
@@ -205,7 +204,7 @@
             android:onClick="irtelaDetalhes"
             android:text="@string/mais_detalhes"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="@color/font_light"
             android:textSize="18sp"
             app:drawableRightCompat="@drawable/ic_baseline_navigate_next_24"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
