Ajustes de latout na activity principal e renomeado CategoriasActivityReceita.

--- a/Alzy/app/src/main/res/layout/activity_principal.xml
+++ b/Alzy/app/src/main/res/layout/activity_principal.xml
@@ -196,6 +196,12 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
+        <View
+            android:id="@+id/divider9"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
         <TextView
             android:id="@+id/textView22"
             android:layout_width="match_parent"
