--- a/Alzy/app/src/main/res/layout/activity_categorias_receita.xml
+++ b/Alzy/app/src/main/res/layout/activity_categorias_receita.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".activity.CategoriasActivity">
+    tools:context=".activity.CategoriasActivityReceita">
 
     <LinearLayout
         android:id="@+id/topo"
