--- a/Alzy/app/src/main/res/layout/activity_configuracoes.xml
+++ b/Alzy/app/src/main/res/layout/activity_configuracoes.xml
@@ -53,7 +53,8 @@
             android:text="Adicionar Categoria Personalizada"
             android:textAlignment="inherit"
             android:textColor="#000000"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:onClick="irTelaAdcionarCategoria"/>
 
         <View
             android:id="@+id/divider"
