Concluído layout do PopUp com ícones para categoria personalizada.

--- a/Alzy/app/src/main/res/layout/activity_adiciona_categoria.xml
+++ b/Alzy/app/src/main/res/layout/activity_adiciona_categoria.xml
@@ -101,6 +101,7 @@
             android:id="@+id/editImagem"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:onClick="ShowDialog"
             app:srcCompat="@mipmap/ic_camera" />
 
     </LinearLayout>
