--- a/Alzy/app/src/main/res/layout/popup_icone_receita.xml
+++ b/Alzy/app/src/main/res/layout/popup_icone_receita.xml
@@ -3,22 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
-    android:layout_height="495dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@color/whiteColorAux"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".activity.AdicionaCategoriaActivity">
 
+
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="X"
-        android:textStyle="bold"
-        android:layout_gravity="end"
-        android:textSize="18sp"
         android:id="@+id/textFechar"
-        />
+        android:layout_width="27dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="X"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:textColor="@color/colorPrimaryDarkDefault"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Escolha um ícone"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:padding="5dp"
@@ -126,6 +143,96 @@
             android:layout_height="50dp"
             android:layout_margin="5dp"
             app:srcCompat="@mipmap/ic_roupa" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/imageView13"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_entretenimento" />
+
+        <ImageView
+            android:id="@+id/imageView14"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_ferias" />
+
+        <ImageView
+            android:id="@+id/imageView15"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_saude" />
+
+        <ImageView
+            android:id="@+id/imageView16"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_contas" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/imageView17"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_lanche" />
+
+        <ImageView
+            android:id="@+id/imageView18"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_comida" />
+
+        <ImageView
+            android:id="@+id/imageView19"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_viagem" />
+
+        <ImageView
+            android:id="@+id/imageView20"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_transporte" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/imageView21"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@mipmap/ic_livro" />
+
 
     </LinearLayout>
 
