--- a/Alzy/app/src/main/res/layout/activity_adiciona_categoria.xml
+++ b/Alzy/app/src/main/res/layout/activity_adiciona_categoria.xml
@@ -62,7 +62,7 @@
             android:id="@+id/editNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textAutoComplete"/>
+            android:inputType="textAutoComplete|textCapWords"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -91,10 +91,11 @@
 
         <TextView
 
+            android:id="@+id/text_icone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="Imagem:"
+            android:text="Ícone:"
             android:textSize="18sp" />
 
         <ImageView
@@ -102,6 +103,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:onClick="ShowDialog"
+            android:padding="5dp"
             app:srcCompat="@mipmap/ic_camera" />
 
     </LinearLayout>
