--- a/Alzy/app/src/main/res/layout/intro_3.xml
+++ b/Alzy/app/src/main/res/layout/intro_3.xml
@@ -78,15 +78,14 @@
         <Button
             android:id="@+id/buttonCadastrarse2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_gravity="center"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="24dp"
-            android:background="@color/colorPrimaryDefault"
+            android:background="@mipmap/teste_font_button"
             android:drawableEnd="@drawable/mi_ic_next"
             android:onClick="irTelaCadastro"
-            android:text="@string/cadastrar_se"
             android:textAlignment="center"
             android:textColor="@color/whiteColorAux"
             app:layout_constraintBottom_toTopOf="@+id/textView5"
