--- a/Alzy/app/src/main/res/layout/activity_principal.xml
+++ b/Alzy/app/src/main/res/layout/activity_principal.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
