--- a/Alzy/app/src/main/res/layout/adapter_movimentacao.xml
+++ b/Alzy/app/src/main/res/layout/adapter_movimentacao.xml
@@ -12,26 +12,25 @@
         android:layout_margin="16dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textDataAdapter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Data"
-            android:textAlignment="center" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/imageIcone"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@mipmap/ic_comida" />
+
+
             <TextView
-                android:id="@+id/textAdapterTitulo"
+                android:id="@+id/textDataAdapter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:text="Titulo"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:text="Data"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textAdapterValor"
@@ -41,19 +40,36 @@
                 android:gravity="end"
                 android:text="valor"
                 android:textColor="#00D39E"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textAdapterCategoria"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:text="Categoria"
-            android:textColor="#696969"
-            android:textSize="14sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textAdapterCategoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:text="Categoria"
+                android:textColor="#696969"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textAdapterTitulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:text="Titulo"
+                android:textAlignment="textEnd"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
