Habilitada função de direrionamento para adicionar categoria na tela de seleção de categoria receita.

--- a/Alzy/app/src/main/res/layout/activity_categorias_receita.xml
+++ b/Alzy/app/src/main/res/layout/activity_categorias_receita.xml
@@ -84,8 +84,9 @@
         android:id="@+id/floatingActionButtonAddCategoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:fab_colorNormal="@color/colorPrimaryDarkDefault"
+        android:onClick="irTelaAdcionarCategoria"
         android:src="@drawable/ic_baseline_add_circle_24"
+        app:fab_colorNormal="@color/colorPrimaryDarkDefault"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
