--- a/Alzy/app/src/main/res/layout/activity_cadastro.xml
+++ b/Alzy/app/src/main/res/layout/activity_cadastro.xml
@@ -4,12 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="0dp"
     tools:context=".activity.CadastroActivity">
+
+    <ProgressBar
+        android:id="@+id/progressBarCircularCadastro"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="245dp"
+        android:layout_height="245dp"
+        android:background="@color/whiteColorAux"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="0dp"
         android:background="@color/colorPrimaryDefault"
         android:orientation="horizontal"
         android:padding="10dp"
@@ -33,6 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,64 +57,43 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.334">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout2"
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editNomeCadastro"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textAlignment="center"
-            tools:layout_editor_absoluteX="40dp"
-            tools:layout_editor_absoluteY="149dp">
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@mipmap/teste_caixa_edit"
+            android:drawableRight="@drawable/ic_baseline_person_24"
+            android:hint="Nome"
+            android:inputType="textPersonName|textCapSentences"
+            android:padding="10dp" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editNomeCadastro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:drawableRight="@drawable/ic_baseline_person_24"
-                android:hint="Nome"
-                android:inputType="textPersonName|textCapSentences"
-                android:padding="10dp" />
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editEmailCadastro"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="0dp"
-            android:textAlignment="center"
-            tools:layout_editor_absoluteX="40dp"
-            tools:layout_editor_absoluteY="223dp">
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@mipmap/teste_caixa_edit"
+            android:drawableRight="@drawable/ic_baseline_email_24"
+            android:hint="E-mail"
+            android:inputType="textWebEmailAddress"
+            android:padding="10dp" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editEmailCadastro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:drawableRight="@drawable/ic_baseline_email_24"
-                android:hint="E-mail"
-                android:inputType="textWebEmailAddress"
-                android:padding="10dp" />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textAlignment="center"
-            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorPrimaryDarkDefault"
-            tools:layout_editor_absoluteX="40dp"
-            tools:layout_editor_absoluteY="298dp">
+            app:hintEnabled="false"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editSenhaCadastro"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:background="@mipmap/teste_caixa_edit"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
                 android:hint="Senha"
                 android:inputType="textPassword"
@@ -164,16 +158,5 @@
             android:textAlignment="center"
             android:textSize="12sp" />
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBarCircularCadastro"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="245dp"
-        android:layout_height="245dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
