--- a/Alzy/app/src/main/res/layout/activity_login.xml
+++ b/Alzy/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBarCircular"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="245dp"
+        android:layout_height="245dp"
+        android:background="@color/whiteColorAux"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout7"
         android:layout_width="70dp"
@@ -71,29 +82,17 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.502">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout"
+        <com.google.android.material.textfield.TextInputEditText
+
+            android:id="@+id/editEmailLogin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:padding="0dp"
-            android:textAlignment="center"
-            app:errorEnabled="true"
-            tools:layout_editor_absoluteX="40dp"
-            tools:layout_editor_absoluteY="182dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-
-                android:id="@+id/editEmailLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:drawableRight="@drawable/ic_baseline_email_24"
-                android:hint="E-mail"
-                android:inputType="textWebEmailAddress"
-                android:padding="10dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@mipmap/teste_caixa_edit"
+            android:drawableRight="@drawable/ic_baseline_email_24"
+            android:hint="E-mail"
+            android:inputType="textWebEmailAddress"
+            android:padding="10dp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout13"
@@ -103,17 +102,17 @@
             android:padding="0dp"
             android:textAlignment="center"
             app:errorEnabled="true"
-            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+            app:hintEnabled="false"
+
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorPrimaryDarkDefault"
             tools:layout_editor_absoluteX="40dp"
             tools:layout_editor_absoluteY="273dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editSenhaLogin"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
+                android:layout_height="50dp"
+                android:background="@mipmap/teste_caixa_edit"
                 android:hint="Senha"
                 android:inputType="textPassword"
                 android:padding="10dp" />
@@ -164,15 +163,5 @@
                 tools:layout_editor_absoluteY="459dp" />
         </LinearLayout>
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBarCircular"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="245dp"
-        android:layout_height="245dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
