--- a/Alzy/app/src/main/res/layout/intro_3.xml
+++ b/Alzy/app/src/main/res/layout/intro_3.xml
@@ -94,6 +94,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/whiteColorAux"
+            android:drawableStart="@mipmap/google_icon"
+            android:text="Entrar com o Google"
+            android:textColor="@color/font_black" />
+
         <TextView
             android:id="@+id/textView9"
             android:layout_width="match_parent"
