--- a/Alzy/app/src/main/res/layout/adapter_categorias.xml
+++ b/Alzy/app/src/main/res/layout/adapter_categorias.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardCategorias"
@@ -25,7 +25,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:padding="5dp"
-                tools:srcCompat="@mipmap/ic_camera" />
+                tools:srcCompat="@mipmap/ic_compras" />
 
         </LinearLayout>
 
@@ -36,7 +36,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textViewTitulo"
+                android:id="@+id/textViewNome"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_weight="1"
@@ -62,4 +62,4 @@
             android:background="?android:attr/listDivider" />
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
