Refatorada função de retorno de categorias.

--- a/Alzy/app/src/main/res/layout/activity_categorias.xml
+++ b/Alzy/app/src/main/res/layout/activity_categorias.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ListCategoriasActivity">
+    tools:context=".activity.CategoriasActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -31,8 +31,6 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout17"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,8 +38,8 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerCategorias"
+        <ListView
+            android:id="@+id/lisViewCategorias"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
