--- a/Alzy/app/src/main/res/layout/activity_receita.xml
+++ b/Alzy/app/src/main/res/layout/activity_receita.xml
@@ -148,7 +148,7 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_baseline_category_24"
             android:hint="Categoria | Ex: Salário"
-            android:onClick="irTelaCategorias"
+            android:onClick="irTelaCategoriasActivity"
             android:padding="10dp"
             android:textSize="18sp" />
 
